@@ -1,3 +1,10 @@
+2001-10-10  Havoc Pennington  <hp@redhat.com>
+
+	* bonobo/bonobo-ui-util.c (bonobo_ui_util_set_ui): fix docs to
+	reflect that arg should be datadir not prefix
+	(bonobo_ui_util_get_ui_fname): fix docs to reflect that arg should 
+	be datadir not prefix
+
 2001-10-11  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-util.c (bonobo_ui_util_get_ui_fname):
